<resources>
    <string name="app_name">Story App</string>
    <string name="message_login_page">Enter your data first</string>
    <string name="title_login_page">Are you ready to share your story?</string>
    <string name="email_invalid">Your Email is Invalid</string>
    <string name="email">Email</string>
    <string name="hint_email">Fill in your email</string>
    <string name="password">Password</string>
    <string name="password_notmatch">Password does not match</string>
    <string name="password_confirm">Confirm password</string>
    <string name="hint_password">Fill in your password</string>
    <string name="password_characters">Password cannot be less than 8 characters</string>
    <string name="login">Login</string>
    <string name="login_success">You are logged in successfully</string>
    <string name="success">SUCCESS</string>
    <string name="register_success_desc">Congratulations, your account has been successfully created.</string>
    <string name="login_error">Login Error</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="here">Here</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="picture">Picture</string>
    <string name="title_story">Title Story</string>
    <string name="desc_story">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="logout">Log Out</string>
    <string name="logout_desc">Are you sure want to log out?</string>
    <string name="login_dont_have_account">Don’t have an account yet? Register</string>
    <string name="title_register_page">Complete your registration data below</string>
    <string name="title_main">Story App</string>
    <string name="name">Name</string>
    <string name="galerry">Galerry</string>
    <string name="upload">Upload</string>
    <string name="camera">Camera</string>
    <string name="description">Description</string>
    <string name="login_success_desc">You have successfully logged in, welcome</string>
    <string name="menu_logout">Logout</string>
    <string name="register">Register</string>
    <string name="retry">Try Again</string>
    <string name="menu_language">Language</string>
    <string name="menu_map">Maps</string>
    <string name="detail_story">Detail Story</string>
    <string name="turn_on_location">Turn On Location</string>
    <string name="please_active_locationyou">Please Active Location You</string>
    <string name="success_upload_photo">Congratulations, you have successfully uploaded the image</string>
    <string name="empty_image_warning">Please insert the image file first.</string>
    <string name="register_have_account">Already have an account?</string>
    <string name="network_error_message">Network error occurred. Please check your internet connection</string>
    <string name="unexpected_error_message">An unexpected error occurred. Please try again later</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>