<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/bg_round_logout"
    android:layout_marginHorizontal="20dp"
    app:cardBackgroundColor="@color/white"
    android:layout_height="match_parent">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/logout"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout_desc"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnyes"
                app:cornerRadius="10dp"
                android:textSize="14sp"
                android:text="@string/yes"
                android:layout_margin="10dp"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnno"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:text="@string/no"
                app:cornerRadius="10dp"
                android:backgroundTint="@color/grey"
                android:layout_margin="10dp"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>